--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Laço de Repetição</h1>
+  <h1>ANTONIO FERREIRA DA SILVA NETO</h1>
   <div id="texto-animado">ALMEIDA</div>
   
     <script src="main.js"></script>    
